--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,20 @@
 group 'org.csl'
 version '1.0'
 
+buildscript {
+    repositories {
+        jcenter()
+    }
+    dependencies {
+        classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.1'
+    }
+}
+apply plugin: 'com.github.johnrengelman.shadow'
+
 apply plugin: 'java'
 apply plugin:'application'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 1.9
 mainClassName = "MainClass"
 compileJava {
     options.fork = true
@@ -35,7 +45,7 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.8.3'
     compile group: 'org.antlr', name: 'antlr4-runtime', version: '4.5.3'
     compile group: 'com.intellij', name: 'forms_rt', version: '7.0.3'
-
+    compile group: 'org.fxmisc.richtext', name: 'richtextfx', version: '0.8.2'
     compile group: 'org.glassfish.jersey.core', name: 'jersey-server', version: '2.25'
     compile group: 'org.glassfish.grizzly', name: 'grizzly-http-server', version: '2.3.28'
 
